PDF version of CV may not be visible (but can be downloaded) with Safari

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -253,7 +253,7 @@ Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2024. Modal Indefinites and Semant
 Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. 2024. Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}. \href{https://doi.org/10.1007/s11050-023-09218-9}{https://doi.org/10.1007/s11050-023-09218-9}
 
 
-Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. 2023. Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}, (1-2), 289--309. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
+Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. 2023. Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}, 40 (1-2), 289--309. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
 
 
 Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. 2023. Concessive Scalar Particles:
@@ -392,12 +392,13 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. To Compose a Number is to Compose a Cardinality: Evidence from Intensional Contexts, \textit{Proceedings of the Twenty-Fourth Amsterdam Colloquium}.
+Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. To Compose a Number is to Compose a Cardinality: Evidence from Intensional Contexts, \textit{Proceedings of the Twenty-Fourth Amsterdam Colloquium}, ed. by Fausto Carcassi, Tamar Johnson, Søren Brinck Knudstorp,
+Sabina Domínguez Parrado, Pablo Rivas Robledo
+and Giorgio Sbardolin, University of Amsterdam, pp. 8-14.
 
+Alonso-Ovalle, Luis. 2024. Higher-Order Quantification outside Questions: The Case of Free Relatives, \textit{Proceedings of the Fifty-Forth Annual Meeting of the North East Linguistic Society}, ed. by Shaunak Phadnis, Carla Spellerberg and Brynne Wilkinson, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp. 45-59.
 
-Alonso-Ovalle, Luis. forthcoming. Higher-Order Quantification outside Questions: The Case of Free Relatives, \textit{Proceedings of the Fifty-Forth Annual Meeting of the North East Linguistic Society}, ed. by Shaunak Phadnis, Carla Spellerberg and Brynne Wilkinson, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp. 45-59.
-
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eighth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Geraldine Baumann, Daniel Gutzmann, Jonas Koopman, Kristina Liefke, Agata Renans and Tatjana Scheffler, Ruhr-University Bochum, pp. 18-35.
+Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eighth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Geraldine Baumann, Daniel Gutzmann, Jonas Koopman, Kristina Liefke, Agata Renans and Tatjana Scheffler, Ruhr-University Bochum, pp. 18-35.
 
 
 Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, CLC Publications, Cornell University, pp. 583-602.
@@ -408,9 +409,9 @@ Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. Structural Ambiguity in Pseudo-P
 Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Universal Force from Exhaustification: Farsi \textit{Hame -i} DPs, \textit{Proceedings of the Thirty-Second Semantics and Linguistic Theory Conference}, ed. by John R. Starr, Juhyae Kim and Burak \"{O}ney, CLC Publications, Cornell University, pp. 619-638. %\\ \hspace*{\fill} \href{https://doi.org/10.3765/salt.v1i0.5401}{https://doi.org/10.3765/salt.v1i0.5401}
 
 
-Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Farsi \textit{Hame -i} DPs and Intensional Transitive Verbs, \textit{Proceedings of the 23rd Amsterdam Colloquium}, ed. by Marco Degano, Tom Roberts, Giorgio Sbardolini and Marieke Schouwstra, pp 214-220.%\\ \hspace*{\fill} \href{https://events.illc.uva.nl/AC/AC2022/Proceedings/}{https://events.illc.uva.nl/AC/AC2022/Proceedings/}
+Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Farsi \textit{Hame -i} DPs and Intensional Transitive Verbs, \textit{Proceedings of the 23rd Amsterdam Colloquium}, ed. by Marco Degano, Tom Roberts, Giorgio Sbardolini and Marieke Schouwstra, University of Amsterdam, pp. 214-220.%\\ \hspace*{\fill} \href{https://events.illc.uva.nl/AC/AC2022/Proceedings/}{https://events.illc.uva.nl/AC/AC2022/Proceedings/}
 
-Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. 2022. Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society}, ed. by \"{O}zge Bakay, Breanna Pratley, Eva Neu and Peyton Deal, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 15-28.
+Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. 2022. Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society}, ed. by \"{O}zge Bakay, Breanna Pratley, Eva Neu and Peyton Deal, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp. 15-28.
 
 Alonso-Ovalle, Luis, Esmail Mogiseh and Jonathan Palucci. 2024 (based on 2021 presentation) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}, ed. by Robert Autry, Gabriela de la Cruz, Luis A. Irizarry Figueroa, Kristina Mihajlovic, Tianyi Ni, Ryan Smith, and Heidi Harley, Cascadilla Proceedings Project, Somerville, MA: pp. 432-440.
 
