--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -247,10 +247,10 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
-Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2024. Modal Indefinites and Semantic Variation: Lessons from Chuj, \textit{Semantics and Pragmatics}, 17. \href{https://doi.org/10.3765/sp.17.12}{https://doi.org/10.3765/sp.17.12}
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2024. Modal Indefinites and Semantic Variation: Lessons from Chuj, \textit{Semantics and Pragmatics}, 17 (12), 1-54. \href{https://doi.org/10.3765/sp.17.12}{https://doi.org/10.3765/sp.17.12}
 
 
-Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. 2024. Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}. \href{https://doi.org/10.1007/s11050-023-09218-9}{https://doi.org/10.1007/s11050-023-09218-9}
+Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. 2024. Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}, 32, 135-176. \href{https://doi.org/10.1007/s11050-023-09218-9}{https://doi.org/10.1007/s11050-023-09218-9}
 
 
 Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. 2023. Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}, 40 (1-2), 289--309. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
@@ -391,6 +391,9 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 % \end{revnumerate}
 
 \subsection*{Proceedings Papers}
+
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. Decoupling Degrees from their Instantiations, \textit{Proceedings of the Twenty-Ninth Annual} Sinn und Bedeutung \textit{Conference}.
+
 
 Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. To Compose a Number is to Compose a Cardinality: Evidence from Intensional Contexts, \textit{Proceedings of the Twenty-Fourth Amsterdam Colloquium}, ed. by Fausto Carcassi, Tamar Johnson, Søren Brinck Knudstorp,
 Sabina Domínguez Parrado, Pablo Rivas Robledo
@@ -681,6 +684,8 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
+``To compose a number is to compose a cardinality: evidence from intensional contexts'' (with Bernhard Schwarz), \textit{24th Amsterdam Colloquium}, University of Amsterdam, December 19, 2024.
+
 ``Higher order quantification outside questions: the case of free relatives'', \textit{Fifty-Fourth
   Meeting of the North East Linguistic Society}, MIT, January 26, 2024.
 
@@ -813,10 +818,16 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
 
 \subsubsection*{Poster Presentations}
 
-``On the natural language metaphysics of numbers'' (with Bernhard Schwarz), \textit{Sinn und Bedeutung 19}, University of Bochum, September 6, 2023.
 
-``Structural ambiguity in pseudo-partitives:
-the case of quantity nouns'' (with Bernhard Schwarz), \textit{Thirty-Third Semantics and Linguistic Theory Conference}, Yale University, May 12, 2023.
+``Number Marking in Interrogative Phrases: Evidence from Farsi'' (with Esmail Moghiseh),
+\textit{Sinn und Bedeutung 29}, Consorzio Universitario Mediterraneo Orientale, Noto, Sicily, September 17, 2024.
+
+``Decoupling Amounts from their Instantiations'' (with Bernhard Schwarz), \textit{Sinn und Bedeutung 29}, Consorzio Universitario Mediterraneo Orientale, Noto, Sicily, September 17, 2024.
+
+``On the Natural Language Metaphysics of Numbers'' (with Bernhard Schwarz), \textit{Sinn und Bedeutung 28}, University of Bochum, September 6, 2023.
+
+``Structural Ambiguity in Pseudo-partitives:
+the Case of Quantity Nouns'' (with Bernhard Schwarz), \textit{Thirty-Third Semantics and Linguistic Theory Conference}, Yale University, May 12, 2023.
 
 
 ``Two Types of Intensional Transitive Verbs: The View from Farsi'' (with Esmail Moghiseh), \textit{The Twenty-Third Amsterdam Colloquium}, University of Amsterdam [online presentation], December 20, 2022.
