--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -388,6 +388,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 % \end{itemize}
 
 
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. Decoupling Degrees from their Instantiations, \textit{Proceedings of the Twenty-Ninth Annual} Sinn und Bedeutung \textit{Conference}.
 % \end{revnumerate}
 
 \subsection*{Proceedings Papers}
