--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -395,6 +395,7 @@ Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. Decoupling Degrees from t
 
 Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. Decoupling Degrees from their Instantiations, \textit{Proceedings of the Twenty-Ninth Annual} Sinn und Bedeutung \textit{Conference}.
 
+Alonso-Ovalle, Luis and Esmail Moghiseh. forthcoming. Number Marking in Interrogative Phrases: \textit{What} Interrogatives in Farsi, \textit{Proceedings of the Twenty-Ninth Annual} Sinn und Bedeutung \textit{Conference}.
 
 Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. To Compose a Number is to Compose a Cardinality: Evidence from Intensional Contexts, \textit{Proceedings of the Twenty-Fourth Amsterdam Colloquium}, ed. by Fausto Carcassi, Tamar Johnson, Søren Brinck Knudstorp,
 Sabina Domínguez Parrado, Pablo Rivas Robledo
