--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -340,6 +340,9 @@ Alonso-Ovalle, Luis. 2000. Aspectos gnoseol\'ogicos de la ling\"u\'istica de Cue
 % \renewcommand{\theenumii}{\roman{\enumii}}
 % \begin{revnumerate}
 
+Alonso-Ovalle, Luis, Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein, Mood and Modal Anchoring in Spanish: \textit{De Que} Clauses and Relative Clauses, \textit{A Festschrift
+in Honour of Regine Eckardt}, ed. by Eva Csipak, Johanna David and Mingya Liu, Humboldt-Universit\"{a}t zu Berlin, \href{https://doi.org/10.18452/32563}{https://doi.org/10.18452/32563}.
+
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2020. Free Choice Items and Modal Indefinites. \textit{The Wiley Blackwell Companion to Semantics}, ed. by Lisa Matthewson, Cecile Meier, Hotze Rullmann, and Thomas E. Zimmerman, Wiley Blackwell, 39 pages. %doi: 10.1002/9781118788516.sem00
 
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2017. Epistemic Indefinites: On the Content and Distribution of the Epistemic Effect. \textit{Modality across Syntactic Categories.} ed. by Ana Arregui, Marisa Rivero, and Andr\'es Pablo Salanova, Oxford University Press, pp. 11-30.
