--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -247,6 +247,10 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
+
+Alonso-Ovalle, Luis \textit{\&} Esmail Moghiseh. 2025. Existential Free Choice Items: The Case of Farsi \textit{Yek -i} DPs, 18 (4). \href{https://doi.org/10.3765/sp.18.4}{https://doi.org/10.3765/sp.18.4}
+
+
 Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2024. Modal Indefinites and Semantic Variation: Lessons from Chuj, \textit{Semantics and Pragmatics}, 17 (12), 1-54. \href{https://doi.org/10.3765/sp.17.12}{https://doi.org/10.3765/sp.17.12}
 
 
