--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -4,6 +4,8 @@
 % Font settings
 \usepackage{graphics}
 
+\usepackage{url}
+
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{microtype}
@@ -269,42 +271,44 @@ Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. 2022. Keep \textit{Only} Strong,  \
 %Full DOI: https://doi.org/10.3765/sp.15.6
 %Short DOI: https://doi.org/h2wp
 
-Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2021. Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, 38(4), 483-529. 
-%\\ \hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2021. Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, 38(4), 483-529. \href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
 
 %Journal of Semantics, Volume 38, Issue 4, November 2021, Pages 483–529, https://doi.org/10.1093/jos/ffab009
 
-Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. 2021. Causes and Expectations: On the Interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472.% \hspace*{\hfill} (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
+Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. 2021. Causes and Expectations: On the Interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472. \href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}.
 
-Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2018. Projecting Possibilities in the Nominal Domain. Spanish \textit{Uno Cualquiera}, \textit{Journal of Semantics}. 35:1, 1-41. %\\
-%\hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffx011}{https://doi.org/10.1093/jos/ffx011})
+Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2018. Projecting Possibilities in the Nominal Domain. Spanish \textit{Uno Cualquiera}, \textit{Journal of Semantics}. 35:1, 1-41. \\ \hspace*{\fill}\href{https://doi.org/10.1093/jos/ffx011}{https://doi.org/10.1093/jos/ffx011}.
 
 %[Accepted Dec 2016]
 
+\newpage
+
 Alonso-Ovalle, Luis \textit{\&} Paula
     Men\'endez-Benito. 2013. Two Views on Epistemic
-    Indefinites. \textit{Language and Linguistics Compass}, 7:2, 102-122. 
+    Indefinites. \textit{Language and Linguistics Compass}, 7:2, 102-122.\href{https://doi.org/10.1111/lnc3.12009}{https://doi.org/10.1111/lnc3.12009}
 
 Alonso-Ovalle, Luis \textit{\&} Paula
     Men\'endez-Benito.\ 2012. Indefinites, Dependent Plurality, and
     the Viability Requirement on Scalar Alternatives. \textit{Journal
-      of Semantics}. 30:1. 65-102. %Published online on February 20 2012. doi: 10.1093/jos/ffr013
+      of Semantics}. 30:1. 65-102. \href{https://doi.org/10.1093/jos/ffr013}{https://doi.org/10.1093/jos/ffr013}. 
+
+      %Published online on February 20 2012. doi: 10.1093/jos/ffr013
 
 Alonso-Ovalle, Luis \textit{\&} Paula
     Men\'endez-Benito.\ 2011.\ Domain Restrictions, Modal
     Implicatures, and Plurality: Spanish \textit{Algunos.}
-    \textit{Journal of Semantics}, 28 (2): 211-240.
-
+    \textit{Journal of Semantics}, 28 (2): 211-240. \href{https://doi.org/10.1093/jos/ffq016}{https://doi.org/10.1093/jos/ffq016}. 
 
 Alonso-Ovalle, Luis \textit{\&} Paula
     Men\'endez-Benito. 2010. Modal Indefinites. \textit{Natural
-      Language Semantics} 18 (1): 1-31. 
+      Language Semantics} 18 (1): 1-31. \href{https://doi.org/10.1007/s11050-009-9048-4}{https://doi.org/10.1007/s11050-009-9048-4} 
+
 % \begin{itemize}[ ]
 % \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/wp-content/uploads/modal-indefinites.pdf}{www.alonso-ovalle.net/wp-content/uploads/modal-indefinites.pdf}
 % \end{itemize}
 
 Alonso-Ovalle, Luis. 2009. Counterfactuals,
-  Correlatives and Disjunction. \textit{Linguistics and Philosophy} 32 (2): 207-244.
+  Correlatives and Disjunction. \textit{Linguistics and Philosophy} 32 (2): 207-244.\href{https://doi.org/10.1007/s10988-009-9059-0}{https://doi.org/10.1007/s10988-009-9059-0}
 % \begin{itemize}[ ]
 % \item DOI: 10.1007/s10988-009-9059-0
 % \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/wp-content/uploads/conditionals.pdf}{www.alonso-ovalle.net/wp-content/uploads/exclusive-or.pdf}
@@ -315,16 +319,11 @@ Christopher Potts, Luis Alonso-Ovalle, Ash Asudeh,
     Rajesh Bhatt, Seth Cable, Christopher Davis, Yurie Hara, Angelika
     Kratzer, Eric McCready, Tom Roeper, and Martin Walkow. 2009. 
   Expressives and Identity Conditions. \textit{Linguistic Inquiry}, 40
-  (2) : 356-366. [Squib]
+  (2) : 356-366. [Squib] \href{ https://doi.org/10.1162/ling.2009.40.2.356}{https://doi.org/10.1162/ling.2009.40.2.356}
 
 Alonso-Ovalle, Luis. 2008a. Innocent Exclusion in an
   Alternative Semantics. \textit{Natural Language Semantics} 16 (2):
-  115-128. 
-
-% \begin{itemize}[ ]
-% \item DOI: 10.1007/s11050-008-9027-1
-% \item Preprint {\scshape url:} \href{http://www.alonso-ovalle.net/wp-content/uploads/exclusive-or.pdf}{www.alonso-ovalle.net/wp-content/uploads/exclusive-or.pdf}
-% \end{itemize}
+  115-128. \href{https://doi.org/10.1007/s11050-008-9027-1}{https://doi.org/10.1007/s11050-008-9027-1} 
 
 Alonso-Ovalle, Luis; Charles Clifton; Susana Fern\'andez-Solera \textit{\&} Lyn Frazier. 2002. Null \textit{vs.} Overt Pronouns and the Topic-Focus Articulation in Spanish, \textit{Journal of Italian Linguistics}, 14:2, pp. 151-169. 
 % \begin{itemize}[ ]
