--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -970,15 +970,18 @@ Justin Royer, ``Elements of (In)definiteness and Binding: A Mayan Perspective'',
 
 \subsubsection*{In progress}
 
-Terrance Gatchalian, ``Temporal markers in Kanienk\'eha'' (co-supervised with Jessica Coon).
+Terrance Gatchalian, ``Temporal Markers in Kanien'k\'eha'' (co-supervised with Jessica Coon).
 
+Willie Myers, ``Topics in Kanien'k\'eha'' (co-supervised with Alan Bale).
+
+Katya Morgunova, ``Complementation in Kanien'k\'eha'' (co-supervised with Martina Martinovi\c{c}).
 \vspace{-10pt}
 
 \subsubsection*{Committee Member}
 
-Elizabeth Heredia-Murillo, University of Nantes / University of Gr\"{o}ningen ``The semantics and L1 acquisition of scalar (focus) particles: the case of Spanish \textit{(ni) siquiera} and \textit{incluso}'' (succesfully defended, October 19, 2023.)
+Elizabeth Heredia-Murillo, University of Nantes / University of Gr\"{o}ningen ``The Semantics and L1 Acquisition of Scalar (Focus) Particles: the Case of Spanish \textit{(Ni) Siquiera} and \textit{Incluso}'' (succesfully defended, October 19, 2023.)
 
-Alanah McKillen, ``On the interpretation of reflexive pronouns'', (succesfully defended in March 2016.)
+Alanah McKillen, ``On the Interpretation of Reflexive Pronouns'', (succesfully defended in March 2016.)
 
 Tokiko Okuma, ``Overt Pronoun Constraint Effects in Second Language Japanese'', (successfully defended in April 2015.)
 
@@ -996,7 +999,7 @@ Alexandra Simonenko, ``Grammatical Ingredients of Definiteness'',
 \subsubsection*{Completed}
 
 
-Amy Bruno, ``Contrastive negation and Presuppositional Alternatives'', (co-supervised with Bernhard Schwarz, successfully defended in May 2017.)
+Amy Bruno, ``Contrastive Negation and Presuppositional Alternatives'', (co-supervised with Bernhard Schwarz, successfully defended in May 2017.)
 
 Francesco Gentile, ``Adjectives as Reduced Relative Clauses?
 The case of Italian Prenominal and Postnominal adjectives.'', (successfully defended in April  2017.)
@@ -1028,6 +1031,10 @@ Marzieh Mortazavinia, ``\textit{Even} and \textit{Only}''
 (co-supervised with Bernhard Schwarz, successfully defended in July
 2013. )
 
+Katya Morgunova, ``Negation in Kanien'k\'eha'' (co-supervised with Jessica Coon, succesfully defended in September 2024).
+
+Willie Myers, ``Repetitive Presuppositions and Argument structure in Kanien'k\'eha'' (co-supervised with Alan Bale, succesfully defended in September 2024).
+
 Mathieu Paill\'e, ``Term Colors and Exhaustive Readings.'' (co-supervised with Bernhard Schwarz, successfully defended in June 2020)
 
 Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'', (successfully defended in May 2021).
@@ -1035,18 +1042,16 @@ Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'', (successfully defen
 Jonathan Palucci, ``Modal Ingredients of \textit{Have}: Disentangling Causers from Engineers'' (eval 2, co-supervised with Jessica Coon, successfully defended on April 7, 2022).
 
 
-\subsubsection*{In Progress}
+%\subsubsection*{In Progress}
 
 
-Willie Mayers, ``Number marking in Kanienk\'eha''  (co-supervised with Alan Bale).
 
-Katya Morgunova, ``Negation in Kanien\'eha'' (co-supervised with Jessica Coon).
 
 
 \subsubsection*{Committee Member}
 
 
-Francesco Gentile,  ``Adjectives as reduced relative clauses. The case of Italian prenominal and postnominal adjectives.'' (Co-supervised with Junko Shimoyama, successfully defended in June 2017.)
+Francesco Gentile,  ``Adjectives as Reduced Relative Clauses. The Case of Italian Prenominal and Postnominal Adjectives.'' (Co-supervised with Junko Shimoyama, successfully defended in June 2017.)
 
 Daniel Goodhue, ``The Contradiction Contour and Questions''
 (Co-supervised with Michael Wagner and Bernhard Schwarz, successfully
@@ -1056,7 +1061,7 @@ defended in May 2014).
 
 Jumanah Abusulaiman, “Modality in Makkan Arabic: The Interaction between Modals and Aspect” University of Ottawa , Ph. D. dissertation, on November 4, 2019.
 
-Ph.\ D evaluation paper examiner: Brandon J. Fry, ``The semantics of attitude ascription: a literature review and a proposal for a study of Ojibwe cross-clausal agreement'', University of Ottawa.
+Ph.\ D evaluation paper examiner: Brandon J. Fry, ``The Semantics of Attitude Ascription: a Literature Review and a Proposal for a Study of Ojibwe Cross-Clausal Agreement'', University of Ottawa.
 
 Jared Kabbara, School of Computer Science, dissertation proposal defence, Dec 6. 2019.
 
